@@ -1,5 +1,6 @@
 Revision history for HTML::Forms
 
+          - Better error messages
           - Renamed Forms before/after build to before/after build fields
           - Regenerate meta data
           - Adds empty English lexicon
